--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,17 @@ android {
     }
 }
 
+android.libraryVariants.all { variant ->
+    def name = variant.buildType.name
+    if (name.equals(com.android.builder.BuilderConstants.DEBUG)) {
+        return; // Skip debug builds.
+    }
+    def task = project.tasks.create "jar${name.capitalize()}", Jar
+    task.dependsOn variant.javaCompile
+    task.from variant.javaCompile.destinationDir
+    artifacts.add('archives', task);
+}
+
 dependencies {
     compile 'com.android.support:appcompat-v7:19.0.1'
     compile 'com.android.support:mediarouter-v7:19.0.1' 
