--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,21 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        classpath 'com.github.dcendents:android-maven-plugin:1.0'
         classpath 'com.android.tools.build:gradle:0.9.+'
     }
+}
+
+apply plugin: 'android-library'
+apply plugin: 'android-maven'
+
+configurations {
+    deployerJars
 }
 
 repositories {
     mavenCentral()
 }
-
-apply plugin: 'android-library'
 
 android {
     compileSdkVersion 19
@@ -43,7 +49,19 @@ android.libraryVariants.all { variant ->
 }
 
 dependencies {
+    deployerJars "org.kuali.maven.wagons:maven-s3-wagon:1.2.1"
     compile 'com.android.support:appcompat-v7:19.0.1'
     compile 'com.android.support:mediarouter-v7:19.0.1'
     compile 'com.google.android.gms:play-services:4.3.+'
 }
+
+uploadArchives {
+    repositories.mavenDeployer {
+        configuration = configurations.deployerJars
+        repository(url: 's3://repo.brightcove.com/releases') {
+        }
+        snapshotRepository(url: 's3://repo.brightcove.com/snapshots') {
+        }
+    }
+}
+uploadArchives.dependsOn 'install'
