--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 android {
     compileSdkVersion 19
     buildToolsVersion "19.1.0"
-    publishNonDefault true
+    defaultPublishConfig "debug"
 
     defaultConfig {
         minSdkVersion 10
@@ -42,7 +42,7 @@ dependencies {
     deployerJars "org.kuali.maven.wagons:maven-s3-wagon:1.2.1"
     compile 'com.android.support:appcompat-v7:20.+'
     compile 'com.android.support:mediarouter-v7:20.+'
-    compile 'com.google.android.gms:play-services:5.0.+'
+    compile 'com.google.android.gms:play-services:6.1.71'
 }
 
 uploadArchives {
